# montypy

./: README.md
Montypy/monty_python_scraper/: montypytho_json  montypython - Copie.json  processed_montypython.json  scrapy.cfg
Montypy/monty_python_scraper/monty_python_scraper/: items.py  middlewares.py  pipelines.py  settings.py
Montypy/monty_python_scraper/monty_python_scraper/spiders/: montypython.py
Montypy/montypy/: README.md  pyproject.toml  requirements.txt
Montypy/montypy/montypy/: chatbot.py  chatbot2.py  preprocess_json.py  process_data.py  train_model.py
Montypy/montypyanywhere/: README.md  app.py  requirements.txt
Montypy/montypyanywhere/montypy_model/: config.json
Montypy/montypyanywhere/templates/: index.html
Montypy/montypyweb/: app.py  app2.py
Montypy/montypyweb/templates/: index.html  old_index.html
