[tool.poetry]
name = "montypy"
version = "0.1.0"
description = "A dumb chatbot fine-tuned on Monty Python dialogues"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.30.0"
datasets = "^2.13.0"
torch = "^2.0.0"
sentencepiece = "^0.1.99"
accelerate = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
